--- a/QManager/QManager/src/GUI/MainScreen.resx
+++ b/QManager/QManager/src/GUI/MainScreen.resx
@@ -120,11 +120,39 @@
   <metadata name="leftMenu.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="PictureBoxAvatar.Location" type="System.Drawing.Point, System.Drawing">
+    <value>25, 25</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="PictureBoxAvatar.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="PictureBoxAvatar.Size" type="System.Drawing.Size, System.Drawing">
+    <value>150, 150</value>
+  </data>
+  <data name="PictureBoxAvatar.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
+    <value>StretchImage</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="PictureBoxAvatar.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;PictureBoxAvatar.Name" xml:space="preserve">
+    <value>PictureBoxAvatar</value>
+  </data>
+  <data name="&gt;&gt;PictureBoxAvatar.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;PictureBoxAvatar.Parent" xml:space="preserve">
+    <value>leftMenu</value>
+  </data>
+  <data name="&gt;&gt;PictureBoxAvatar.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="buttonCloseLeftMenu.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Bottom</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttonCloseLeftMenu.Font" type="System.Drawing.Font, System.Drawing">
     <value>Arial, 12pt, style=Bold</value>
   </data>
@@ -137,7 +165,6 @@
   <data name="buttonCloseLeftMenu.Size" type="System.Drawing.Size, System.Drawing">
     <value>200, 30</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="buttonCloseLeftMenu.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
@@ -154,7 +181,7 @@
     <value>leftMenu</value>
   </data>
   <data name="&gt;&gt;buttonCloseLeftMenu.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="leftMenu.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
