--- a/QManager/QManager/Services/HTTP_API/APIGlossary.resx
+++ b/QManager/QManager/Services/HTTP_API/APIGlossary.resx
@@ -126,4 +126,16 @@
   <data name="KEY_USERNAME" xml:space="preserve">
     <value>username</value>
   </data>
+  <data name="RES_KEY_DATA" xml:space="preserve">
+    <value>data</value>
+  </data>
+  <data name="RES_KEY_MESSAGE" xml:space="preserve">
+    <value>message</value>
+  </data>
+  <data name="RES_KEY_SUCCESS" xml:space="preserve">
+    <value>success</value>
+  </data>
+  <data name="RES_KEY_TOKEN" xml:space="preserve">
+    <value>token</value>
+  </data>
 </root>
