--- a/QManager/QManager/Services/HTTP_API/APIGlossary.resx
+++ b/QManager/QManager/Services/HTTP_API/APIGlossary.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="API_GET_ALL_DEPARTMENT" xml:space="preserve">
+    <value>/auth/all-department</value>
+  </data>
   <data name="API_LOGIN" xml:space="preserve">
     <value>/public/login</value>
   </data>
