--- a/QManager/QManager/GUI/MainScreen.resx
+++ b/QManager/QManager/GUI/MainScreen.resx
@@ -117,14 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="TablePanelLeftMenuContainter.CellBorderStyle" type="System.Windows.Forms.TableLayoutPanelCellBorderStyle, System.Windows.Forms">
-    <value>Single</value>
-  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="TablePanelLeftMenuContainter.ColumnCount" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ButtonOther.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
   </data>
@@ -139,13 +136,13 @@
     <value>NoControl</value>
   </data>
   <data name="ButtonOther.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 265</value>
+    <value>0, 260</value>
   </data>
   <data name="ButtonOther.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ButtonOther.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 30</value>
+    <value>180, 30</value>
   </data>
   <data name="ButtonOther.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -178,13 +175,13 @@
     <value>NoControl</value>
   </data>
   <data name="ButtonHR.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 234</value>
+    <value>0, 230</value>
   </data>
   <data name="ButtonHR.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ButtonHR.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 30</value>
+    <value>180, 30</value>
   </data>
   <data name="ButtonHR.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -217,13 +214,13 @@
     <value>NoControl</value>
   </data>
   <data name="ButtonCloseLeftMenu.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 475</value>
+    <value>0, 476</value>
   </data>
   <data name="ButtonCloseLeftMenu.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ButtonCloseLeftMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 30</value>
+    <value>180, 30</value>
   </data>
   <data name="ButtonCloseLeftMenu.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -250,7 +247,7 @@
     <value>Stretch</value>
   </data>
   <data name="PictureBoxAvatar.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 11</value>
+    <value>40, 10</value>
   </data>
   <data name="PictureBoxAvatar.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
@@ -286,13 +283,13 @@
     <value>NoControl</value>
   </data>
   <data name="LabelProfileInfo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 122</value>
+    <value>0, 120</value>
   </data>
   <data name="LabelProfileInfo.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="LabelProfileInfo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 80</value>
+    <value>180, 80</value>
   </data>
   <data name="LabelProfileInfo.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -328,13 +325,13 @@ Số định danh: ĐT001</value>
     <value>Arial, 11.25pt</value>
   </data>
   <data name="ButtonSale.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 203</value>
+    <value>0, 200</value>
   </data>
   <data name="ButtonSale.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
   </data>
   <data name="ButtonSale.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 30</value>
+    <value>180, 30</value>
   </data>
   <data name="ButtonSale.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -385,7 +382,7 @@ Số định danh: ĐT001</value>
     <value>0</value>
   </data>
   <data name="TablePanelLeftMenuContainter.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
-    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="ButtonOther" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonHR" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonCloseLeftMenu" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="PictureBoxAvatar" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="LabelProfileInfo" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonSale" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="Percent,100" /&gt;&lt;Rows Styles="Absolute,120,Absolute,80,Absolute,30,Absolute,30,Absolute,30,Percent,100,Absolute,30" /&gt;&lt;/TableLayoutSettings&gt;</value>
+    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="ButtonOther" Row="4" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonHR" Row="3" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonCloseLeftMenu" Row="6" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="PictureBoxAvatar" Row="0" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="LabelProfileInfo" Row="1" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;Control Name="ButtonSale" Row="2" RowSpan="1" Column="0" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="Percent,100" /&gt;&lt;Rows Styles="Absolute,120,Absolute,80,Absolute,30,Absolute,30,Absolute,30,Percent,100,Absolute,30,Absolute,20" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
   <data name="LeftPanel.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
@@ -417,8 +414,44 @@ Số định danh: ĐT001</value>
   <data name="&gt;&gt;LeftPanel.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="TablePanelRight.CellBorderStyle" type="System.Windows.Forms.TableLayoutPanelCellBorderStyle, System.Windows.Forms">
-    <value>Single</value>
+  <data name="ButtonLogout.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Right</value>
+  </data>
+  <data name="ButtonLogout.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="ButtonLogout.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Arial, 11.25pt</value>
+  </data>
+  <data name="ButtonLogout.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="ButtonLogout.Location" type="System.Drawing.Point, System.Drawing">
+    <value>538, 0</value>
+  </data>
+  <data name="ButtonLogout.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="ButtonLogout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 30</value>
+  </data>
+  <data name="ButtonLogout.TabIndex" type="System.Int32, mscorlib">
+    <value>5</value>
+  </data>
+  <data name="ButtonLogout.Text" xml:space="preserve">
+    <value>Đăng xuất</value>
+  </data>
+  <data name="&gt;&gt;ButtonLogout.Name" xml:space="preserve">
+    <value>ButtonLogout</value>
+  </data>
+  <data name="&gt;&gt;ButtonLogout.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;ButtonLogout.Parent" xml:space="preserve">
+    <value>TablePanelStatusBar</value>
+  </data>
+  <data name="&gt;&gt;ButtonLogout.ZOrder" xml:space="preserve">
+    <value>0</value>
   </data>
   <data name="TablePanelRight.ColumnCount" type="System.Int32, mscorlib">
     <value>1</value>
@@ -430,7 +463,7 @@ Số định danh: ĐT001</value>
     <value>Fill</value>
   </data>
   <data name="TablePanelStatusBar.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 475</value>
+    <value>0, 476</value>
   </data>
   <data name="TablePanelStatusBar.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>0, 0, 0, 0</value>
@@ -439,7 +472,7 @@ Số định danh: ĐT001</value>
     <value>1</value>
   </data>
   <data name="TablePanelStatusBar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>636, 30</value>
+    <value>638, 30</value>
   </data>
   <data name="TablePanelStatusBar.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -457,7 +490,7 @@ Số định danh: ĐT001</value>
     <value>0</value>
   </data>
   <data name="TablePanelStatusBar.LayoutSettings" type="System.Windows.Forms.TableLayoutSettings, System.Windows.Forms">
-    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls /&gt;&lt;Columns Styles="Percent,50,Percent,50" /&gt;&lt;Rows Styles="Percent,100,Absolute,30" /&gt;&lt;/TableLayoutSettings&gt;</value>
+    <value>&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;TableLayoutSettings&gt;&lt;Controls&gt;&lt;Control Name="ButtonLogout" Row="0" RowSpan="1" Column="1" ColumnSpan="1" /&gt;&lt;/Controls&gt;&lt;Columns Styles="Percent,50,Percent,50" /&gt;&lt;Rows Styles="Percent,100,Absolute,30" /&gt;&lt;/TableLayoutSettings&gt;</value>
   </data>
   <data name="TablePanelRight.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
